workable web app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shame",
-  "version": "0.0.0",
+  "version": "0.0.0-2",
   "dependencies": {
     "express": "~4.0.0-rc2",
     "morgan": "~1.0.0",
@@ -28,5 +28,12 @@
     "merge-stream": "^0.1.6",
     "path": "^0.4.9",
     "run-sequence": "^1.0.1"
+  },
+  "subdomain": "lazukars-shame",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
